--- a/package.json
+++ b/package.json
@@ -14,7 +14,13 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
