feat: create products api and add swr to fetch data
Getting ready to make the product detail page, I decided it was best to turn the product data into
an API. I also added the swr module to fetch the data.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "framer-motion": "^6.2.8",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swr": "^1.2.2"
   },
   "devDependencies": {
     "cz-conventional-changelog": "^3.3.0",
