--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@stitches/react": "^1.2.7",
     "framer-motion": "^6.2.8",
     "next": "12.1.0",
+    "next-auth": "^4.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
     "swr": "^1.2.2"
   },
   "devDependencies": {
