--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "12.1.1",
     "next-auth": "^4.3.1",
     "react": "17.0.2",
+    "react-collapsed": "^3.3.0",
     "react-cool-onclickoutside": "^1.7.0",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
