--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^6.2.8",
     "next": "12.1.1",
     "next-auth": "^4.3.1",
+    "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-collapsed": "^3.3.0",
     "react-cool-onclickoutside": "^1.7.0",
