--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@fontsource/raleway": "^4.5.5",
+    "@prisma/client": "^3.11.1",
     "@stitches/react": "^1.2.7",
     "framer-motion": "^6.2.8",
     "next": "12.1.1",
@@ -25,7 +27,8 @@
   "devDependencies": {
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "8.12.0",
-    "eslint-config-next": "12.1.1"
+    "eslint-config-next": "12.1.1",
+    "prisma": "^3.11.1"
   },
   "config": {
     "commitizen": {
