--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^3.12.0",
     "@stitches/react": "^1.2.7",
     "framer-motion": "^6.2.9",
+    "imgur": "^2.1.4",
     "next": "12.1.4",
     "next-auth": "^4.3.1",
     "nprogress": "^0.2.0",
