--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-cool-onclickoutside": "^1.7.0",
     "react-dom": "18.0.0",
     "react-icons": "^4.3.1",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "cz-conventional-changelog": "^3.3.0",
