--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@stitches/react": "^1.2.7",
     "framer-motion": "^6.2.9",
     "imgur": "^2.1.4",
-    "next": "12.1.4",
+    "next": "12.2.5",
     "next-auth": "^4.3.1",
     "nprogress": "^0.2.0",
     "react": "18.0.0",
@@ -27,10 +27,10 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "cz-conventional-changelog": "^3.3.0",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.4",
-    "prisma": "^3.12.0"
+    "prisma": "^3.12.0",
+    "typescript": "^4.9.4"
   },
   "config": {
     "commitizen": {
