--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@tsconfig/next-strictest": "^1.0.0",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.4",
     "prisma": "^3.12.0",
