--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@tsconfig/next-strictest": "^1.0.0",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "eslint": "8.13.0",
