--- a/package.json
+++ b/package.json
@@ -31,9 +31,14 @@
     "@types/nprogress": "^0.2.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
-    "eslint": "8.13.0",
-    "eslint-config-next": "12.1.4",
     "prisma": "^3.12.0",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "@typescript-eslint/eslint-plugin": "^5.47.1",
+    "@typescript-eslint/parser": "^5.47.1",
+    "eslint": "^8.30.0",
+    "eslint-config-next": "12.1.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.1"
   }
 }
