--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@stitches/react": "^1.2.7",
     "framer-motion": "^6.2.9",
     "imgur": "^2.1.4",
-    "next": "12.2.5",
+    "next": "12.3.4",
     "next-auth": "^4.3.1",
     "nprogress": "^0.2.0",
     "react": "18.0.0",
@@ -31,14 +31,14 @@
     "@types/nprogress": "^0.2.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
-    "prisma": "^3.12.0",
-    "typescript": "^4.9.4",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
     "eslint": "^8.30.0",
     "eslint-config-next": "12.1.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.1"
+    "prettier": "^2.8.1",
+    "prisma": "^3.12.0",
+    "typescript": "^4.9.4"
   }
 }
