refactor: add paths in ts compiler options

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,13 @@
 {
+  "compilerOptions": {
+    "baseUrl": "./",
+    "paths": {
+      "@components/*": ["components/*"],
+      "@styles/*": ["styles/*"],
+      "@utils": ["utils/index.ts"],
+      "@utils/*": ["utils/*"],
+      "@types": ["types/index.ts"]
+    }
+  },
   "extends": "@tsconfig/next-strictest/tsconfig.json"
 }
