fix: import paths and `authAdminAction` env variable

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,7 @@
     },
     "exactOptionalPropertyTypes": false
   },
-  "extends": "@tsconfig/next-strictest/tsconfig.json"
+  "extends": "@tsconfig/next-strictest/tsconfig.json",
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "exclude": ["node_modules"]
 }
